# braid-mpc

./: .gitignore  .pylintrc  README.md  compare_controllers.py  main.py  pyproject.toml  run_sim.py
braid_controller/core/: agent.py  mpc.py  mpc_centralized.py  mpc_distributed.py  variables.md
braid_controller/utils/: README.md  braidlab_bridge.py  compare_braids.m  geometry.py  grid_controller.py  invariants.py  paths2braid.m  plot_braid.m  robotarium_bridge.py  weights.py
braid_controller/visualization/: plot.py  plot_debug.py
core/: agent.py  mpc.py  mpc_centralized.py  mpc_distributed.py  variables.md
data/: data-legend.md  grids_1.py  grids_2.py  grids_m10_1.yaml  grids_m10_2.yaml  grids_m10_3.yaml  grids_m10_4.yaml  grids_m10_5.yaml  grids_m10_6.yaml  grids_m2_1.yaml  grids_m2_2.yaml  grids_m2_3.yaml  grids_m2_4.yaml  grids_m3_1.yaml  grids_m3_spacelab.yaml  grids_m3_spacelab_1.yaml  grids_m3_spacelab_2.yaml  grids_m3_spacelab_3.yaml  grids_m3_spacelab_4.yaml  grids_m3_spacelab_4b.yaml  grids_m3_spacelab_5.yaml  grids_m3_spacelab_e1.yaml  grids_m3_spacelab_e2.yaml  grids_m3_spacelab_e3.yaml  grids_m3_spacelab_t1.yaml  grids_m3_spacelab_t2.yaml  grids_m3_spacelab_t2b.yaml  grids_m3_spacelab_t3.yaml  grids_m3_spacelab_t4.yaml  grids_m3_spacelab_t5.yaml  grids_m3_spacelab_t6.yaml  grids_m3_spacelab_t7.yaml  grids_m5_1.yaml  grids_m5_2.yaml
docs/: useful-repos.md
matlab-tests/: README.md  grids2paths.m  project_points.m  test_conjugacy_1.m  test_conjugacy_2.m  test_conjugacy_3.m  test_conjugacy_4.m  test_conjugacy_5.m  test_conjugacy_6.m  test_grid_conversion.m
results/: plot_braid.m  plot_distributed_mpc.py
scripts/: README.md  c_bmpc.py  d_bmpc.py
utils/: README.md  braidlab.py  check_braid.m  geometry.py  invariants.py  io.py  matlab_bridge.py  paths2braid.m  robotarium_bridge.py
visualization/: plot.py  plot_debug.py  plot_paths.py
