[project]
name = "braid-controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matlabengine>=25.2.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pyqt5>=5.15.11",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
]
