[project]
name = "braid-controller"
version = "0.1.0"
description = "Distributed MPC-based braid controller."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # numpy 1.26 for python 3.10, free on 3.11+
    "numpy ; python_version >= '3.11'",
    "numpy>=1.26,<2 ; python_version == '3.10'",
    "matplotlib",
    "scipy",
    "pyqt5 ; sys_platform == 'linux'",  # >=5.15.11
    "casadi",
    "cvxopt",
    "robotarium-python-simulator",  # TODO: move to optional-dependencies
    "pyyaml",
]

[project.optional-dependencies]
matlab = [
    "matlabengine>=25.2.2; sys_platform == 'linux'",
]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
robotarium-python-simulator = { git = "https://github.com/robotarium/robotarium_python_simulator", tag = "v1.0.0/main" }

[tool.setuptools.packages.find]
include = ["braid_controller*"]  # mark braid_controller as top-level package

